# ssb-altinn-python

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mypy.ini  noxfile.py  pyproject.toml  sonar-project.properties
.github/workflows/: constraints.txt  docs.yml  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/altinn/: __init__.py  __main__.py  dash_framework_tool.py  editing_state_tools.py  file.py  flatten.py  main.py  parser.py  tabell_i_tabell.py  utils.py
tests/: __init__.py  test_dash_framework_tool.py  test_editing_state_tools.py  test_file.py  test_flatten.py  test_main.py  test_utils.py
tests/data/: RA-0689A3_373a35bb8808.parquet  enheter.feather  form_373a35bb8808.xml  kontaktinfo.feather  skjemamottak.feather
tests/flatten/: test_add_interninfo_columns.py  test_add_lopenr.py  test_attatch_metadata.py  test_check_altinn_type.py  test_convert_to_oslo_time.py  test_create_isee_filename.py  test_create_levels_col.py  test_extract_angiver_id.py  test_extract_counter.py  test_identnr.py  test_isee_transform.py  test_make_angiver_row_df.py  test_make_meta_df.py  test_read_single_xml_to_dict.py  test_reorder_dataframe_columns.py  test_transform_checkbox_var.py  test_validate_file.py  test_validate_interninfo.py  test_xml_transform.py
tests/flatten/data/: fascit_simple.parquet  fascit_tags_checkbox.parquet  form_1e7d1c3e69c0.xml  form_40b39a0b5ebd.xml  meta_1e7d1c3e69c0.json  meta_373a35bb8808.json  meta_40b39a0b5ebd.json
